Fix navbar logo escaping on mobile

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,7 +11,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar {
+#navbar {
     background-color: #181818;
     box-shadow: 0px 0px 20px -5px #000000;
     padding: 10px 0px;
@@ -19,7 +19,7 @@ body {
     top: 0;
     z-index: 20;
 
-    .navbar-brand {
+    #navbar-brand {
         height: 120px;
         transition: height ease 0.4s;
     }
